assets/css/output.css
/* ... */
/* INPUT */

.radio-box input[type="radio"]:checked + label {
  --tw-bg-opacity: 1;
  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
  --tw-text-opacity: 1;
  color: rgb(255 255 255 / var(--tw-text-opacity));
}

/* BUTTON */

.sl-btn {
  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 500ms;
  border-radius: 5px;
  --tw-bg-opacity: 1;
  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
  padding-left: 2rem;
  padding-right: 2rem;
  font-size: 0.875rem;
  font-weight: 500;
  text-transform: uppercase;
  line-height: 2.5rem;
}

.sl-btn:hover {
  --tw-bg-opacity: 1;
  background-color: rgb(20 83 45 / var(--tw-bg-opacity));
}

/*GALLERY ACTIVE STATE*/

.invisible {
  visibility: hidden;
}

.fixed {
  position: fixed;
}

.absolute {
  position: absolute;
}

.relative {
  position: relative;
}

.sticky {
  position: sticky;
}

.inset-0 {
  top: 0px;
  right: 0px;
  bottom: 0px;
  left: 0px;
}

.top-3\.5 {
  top: 0.875rem;
}

.right-3\.5 {
  right: 0.875rem;
}

.top-3 {
  top: 0.75rem;
}

.right-3 {
  right: 0.75rem;
}

.right-0 {
  right: 0px;
}

.top-1\.5 {
  top: 0.375rem;
}

.top-1 {
  top: 0.25rem;
}

.bottom-1 {
  bottom: 0.25rem;
}

.right-5 {
  right: 1.25rem;
}

.top-0 {
  top: 0px;
}

.left-1\/2 {
  left: 50%;
}

.top-\[75\%\] {
  top: 75%;
}

.top-\[78\%\] {
  top: 78%;
}

.top-\[0px\] {
  top: 0px;
}

.left-\[200px\] {
  left: 200px;
}

.top-\[44px\] {
  top: 44px;
}

.top-\[89px\] {
  top: 89px;
}

.top-\[134px\] {
  top: 134px;
}

.left-0 {
  left: 0px;
}

.top-40 {
  top: 10rem;
}

.bottom-0 {
  bottom: 0px;
}

.top-\[7rem\] {
  top: 7rem;
}

.bottom-4 {
  bottom: 1rem;
}

.top-\[50px\] {
  top: 50px;
}

.bottom-5 {
  bottom: 1.25rem;
}

.left-5 {
  left: 1.25rem;
}

.-bottom-full {
  bottom: -100%;
}

.top-28 {
  top: 7rem;
}

.-top-\[125\%\] {
  top: -125%;
}

.left-2\.5 {
  left: 0.625rem;
}

.bottom-1\.5 {
  bottom: 0.375rem;
}

.left-2 {
  left: 0.5rem;
}

.z-\[99999\] {
  z-index: 99999;
}

.z-30 {
  z-index: 30;
}

.-z-10 {
  z-index: -10;
}

.-z-20 {
  z-index: -20;
}

.z-10 {
  z-index: 10;
}

.z-40 {
  z-index: 40;
}

.z-20 {
  z-index: 20;
}

.m-auto {
  margin: auto;
}

.mx-auto {
  margin-left: auto;
  margin-right: auto;
}

.my-1 {
  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
}

.mx-1 {
  margin-left: 0.25rem;
  margin-right: 0.25rem;
}

.mr-5 {
  margin-right: 1.25rem;
}

.mr-auto {
  margin-right: auto;
}

.mr-3\.5 {
  margin-right: 0.875rem;
}

.mr-3 {
  margin-right: 0.75rem;
}

.mb-5 {
  margin-bottom: 1.25rem;
}

.mb-6 {
  margin-bottom: 1.5rem;
}

.mr-1 {
  margin-right: 0.25rem;
}

.mb-7 {
  margin-bottom: 1.75rem;
}

.mb-16 {
  margin-bottom: 4rem;
}

.mr-2\.5 {
  margin-right: 0.625rem;
}

.mr-2 {
  margin-right: 0.5rem;
}

.mb-4 {
  margin-bottom: 1rem;
}

.mt-8 {
  margin-top: 2rem;
}

.mb-10 {
  margin-bottom: 2.5rem;
}

.mb-3 {
  margin-bottom: 0.75rem;
}

.-ml-1\.5 {
  margin-left: -0.375rem;
}

.-ml-1 {
  margin-left: -0.25rem;
}

.ml-5 {
  margin-left: 1.25rem;
}

.mb-12 {
  margin-bottom: 3rem;
}

.mb-3\.5 {
  margin-bottom: 0.875rem;
}

.ml-2\.5 {
  margin-left: 0.625rem;
}

.ml-2 {
  margin-left: 0.5rem;
}

.ml-auto {
  margin-left: auto;
}

.mt-3\.5 {
  margin-top: 0.875rem;
}

.mt-3 {
  margin-top: 0.75rem;
}

.mr-px {
  margin-right: 1px;
}

.mb-1 {
  margin-bottom: 0.25rem;
}

.mt-16 {
  margin-top: 4rem;
}

.mb-\[0\.813rem\] {
  margin-bottom: 0.813rem;
}

.mt-10 {
  margin-top: 2.5rem;
}

.mt-4 {
  margin-top: 1rem;
}

.mt-5 {
  margin-top: 1.25rem;
}

.mb-24 {
  margin-bottom: 6rem;
}

.mt-6 {
  margin-top: 1.5rem;
}

.mt-2 {
  margin-top: 0.5rem;
}

.mb-2 {
  margin-bottom: 0.5rem;
}

.ml-1 {
  margin-left: 0.25rem;
}

.mr-8 {
  margin-right: 2rem;
}

.mt-\[120px\] {
  margin-top: 120px;
}

.mb-8 {
  margin-bottom: 2rem;
}

.ml-3 {
  margin-left: 0.75rem;
}

.mb-20 {
  margin-bottom: 5rem;
}

.mt-auto {
  margin-top: auto;
}

.mt-14 {
  margin-top: 3.5rem;
}

.mb-9 {
  margin-bottom: 2.25rem;
}

.mr-4 {
  margin-right: 1rem;
}

.mb-1\.5 {
  margin-bottom: 0.375rem;
}

.ml-1\.5 {
  margin-left: 0.375rem;
}

.mb-2\.5 {
  margin-bottom: 0.625rem;
}

.mt-0 {
  margin-top: 0px;
}

.mr-1\.5 {
  margin-right: 0.375rem;
}

.block {
  display: block;
}

.inline-block {
  display: inline-block;
}

.flex {
  display: flex;
}

.table {
  display: table;
}

.grid {
  display: grid;
}

.hidden {
  display: none;
}

.h-0 {
  height: 0px;
}

.h-full {
  height: 100%;
}

.h-16 {
  height: 4rem;
}

.h-12 {
  height: 3rem;
}

.h-\[27rem\] {
  height: 27rem;
}

.h-9 {
  height: 2.25rem;
}

.h-2\.5 {
  height: 0.625rem;
}

.h-2 {
  height: 0.5rem;
}

.h-14 {
  height: 3.5rem;
}

.h-8 {
  height: 2rem;
}

.h-40 {
  height: 10rem;
}

.h-auto {
  height: auto;
}

.h-\[3\.125rem\] {
  height: 3.125rem;
}

.h-\[8\.125rem\] {
  height: 8.125rem;
}

.h-10 {
  height: 2.5rem;
}

.h-\[4rem\] {
  height: 4rem;
}

.h-20 {
  height: 5rem;
}

.h-5 {
  height: 1.25rem;
}

.h-fit {
  height: -moz-fit-content;
  height: fit-content;
}

.w-screen {
  width: 100vw;
}

.w-3\/5 {
  width: 60%;
}

.w-full {
  width: 100%;
}

.w-12 {
  width: 3rem;
}

.w-9 {
  width: 2.25rem;
}

.w-\[55\%\] {
  width: 55%;
}

.w-16 {
  width: 4rem;
}

.w-auto {
  width: auto;
}

.w-8 {
  width: 2rem;
}

.w-\[200px\] {
  width: 200px;
}

.w-\[295px\] {
  width: 295px;
}

.w-\[3\.125rem\] {
  width: 3.125rem;
}

.w-\[85\%\] {
  width: 85%;
}

.w-10 {
  width: 2.5rem;
}

.w-20 {
  width: 5rem;
}

.w-3\/4 {
  width: 75%;
}

.w-1\/5 {
  width: 20%;
}
/* ... */

